// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > should render disabled button 1`] = `
<div>
  <button
    class="flex items-center justify-center rounded-sm transition-colors duration-200 ease-in-out gap-2 px-3 py-[6px] flex-row text-white dark:text-nots-grey-800 disabled:bg-nots-grey-200 dark:disabled:bg-white dark:disabled:text-nots-grey-200 focus:outline-none bg-nots-grey-800 dark:bg-white hover:bg-nots-grey-600 dark:hover:bg-nots-grey-100 focus:outline-none focus:ring-2 focus:ring-nots-grey-300"
    disabled=""
  />
</div>
`;

exports[`Button > should render grey filled button 1`] = `
<div>
  <button
    class="flex items-center justify-center rounded-sm transition-colors duration-200 ease-in-out gap-2 px-3 py-[6px] flex-row text-white dark:text-nots-grey-800 disabled:bg-nots-grey-200 dark:disabled:bg-white dark:disabled:text-nots-grey-200 focus:outline-none bg-nots-grey-800 dark:bg-white hover:bg-nots-grey-600 dark:hover:bg-nots-grey-100 focus:outline-none focus:ring-2 focus:ring-nots-grey-300"
  />
</div>
`;

exports[`Button > should render loading button 1`] = `
<div>
  <button
    class="flex items-center justify-center rounded-sm transition-colors duration-200 ease-in-out gap-2 px-3 py-[6px] flex-row pointer-events-none text-white dark:text-nots-grey-800 drop-shadow-none hover:drop-shadow-none pointer-events-none disabled:bg-nots-grey-200 dark:disabled:bg-white dark:disabled:text-nots-grey-200 focus:outline-none bg-nots-grey-800 dark:bg-white hover:bg-nots-grey-600 dark:hover:bg-nots-grey-100 focus:outline-none focus:ring-2 focus:ring-nots-grey-300 hover:bg-ws-primary-500"
  >
    <div
      class="pointer-events-none flex items-center justify-center absolute"
    >
      <svg
        aria-label="loading"
        class="text-current inline-block h-6 w-6 animate-spin"
        fill="transparent"
        focusable="false"
        height="24"
        role="status"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <span
          class="sr-only"
        >
          Loading...
        </span>
        <path
          d="M12 2V6M12 18V22M6 12H2M22 12H18M19.0784 19.0784L16.25 16.25M19.0784 4.99994L16.25 7.82837M4.92157 19.0784L7.75 16.25M4.92157 4.99994L7.75 7.82837"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
  </button>
</div>
`;
